[add] odoo kwitansi 2

--- a/mbf_kwitansi/static/description/index.html
+++ b/mbf_kwitansi/static/description/index.html
@@ -40,10 +40,10 @@
 	<div >
 		<div >
 			<h2 class="oe_slogan bi_title" style="color:#5082c4;">
-				<b> Print Journal Entries Report Odoo Apps </b>
+				<b> Cetak Kwitansi </b>
 			</h2>
 			<p class="oe_slogan">
-				Allow to print pdf report of Journal Entries.
+				Menu cetak kwitansi Pembayaran invoice/penerimaan kas masuk.
 			</p>
 		</div>
 	</div>
@@ -61,8 +61,8 @@
 						<img class="img img-responsive" style="max-width:100%;" src="features/1fet.png"/>
 					</div>
 					<div class="col-md-9">
-					  <h4><b>Allow to print PDF report from Journal Entry</b></h4>
-					  <span class="oe_slogan"> User can generate PDF report from Journal Entry.  </span>
+					  <h4><b>Cetak Kwitansi export file PDF</b></h4>
+					  <span class="oe_slogan"> User can generate PDF report from account payment.  </span>
 					</div>
 				</div>
 			</div>
@@ -72,8 +72,8 @@
 						<img class="img img-responsive" style="max-width:100%;" src="features/2fet.png"/>
 					</div>
 					<div class="col-md-9">
-						<h4><b>Report with total Credit and total Debit</b></h4>
-						<span class="oe_slogan"> Show total Credit and total Debit of Journal Entry.  </span>
+						<h4><b>Penambahan Keterangan dan Approval</b></h4>
+						<span class="oe_slogan"> Menampilkan Keterangan dan tanda tangan approval   </span>
 					</div>
 				</div>
 			</div>
@@ -81,21 +81,21 @@
 	</div>
 </section>
 
-<section class="oe_container lead mt64">
+<!-- <section class="oe_container lead mt64">
 	<div >
 		<div class="oe_slogan oe_spaced text-center">
 			<a class="btn mt8 mr8" title="Demo Request" style="background-color: #2875aa;color: #FFFFFF !important;font-size: 20px;font-weight: bold;border-radius: 7px;" href="mailto:sales@browseinfo.in?Subject=Demo Request for Print Journal Entries Report Odoo Apps" target="_top"> Demo Request </a>
 			<a class="btn mt8 ml8" title="Video Tutorial" style="background-color: #2875aa;color: #FFFFFF !important;font-size: 20px;font-weight: bold;border-radius: 7px;" href="https://youtu.be/qehLT4WOWPs" target="_blank"> Video Tutorial</a>
 		</div>
 	</div>
-</section>
+</section> -->
+
 
 <section class="oe_container lead">
 	<div>
 		<div>
-			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Print Journal Entries button</p>
-			<p class="oe_slogan">On clicking "Print Journal Entries" PDF report for journal entry will get generated.</p>
-			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="1.png">
+			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Menu Payment</p>
+			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="menu_payment.png">
 		</div>
 	</div>
 </section>
@@ -103,21 +103,34 @@
 <section class="oe_container lead">
 	<div>
 		<div>
-			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Journal Entry PDF report</p>
-			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="2.png">
+			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Menu Kwitansi</p>
+			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="menu_kwitansi.png">
 		</div>
 	</div>
 </section>
+
+
 
 <section class="oe_container lead">
 	<div>
 		<div>
-			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Print report for multiple Journal Entries</p>
-			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="3.png">
+			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Tambahan Keterangan</p>
+			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="keterangan.png">
 		</div>
 	</div>
 </section>
 
+
+<section class="oe_container lead">
+	<div>
+		<div>
+			<p class="oe_slogan" style="color: #49a3fe;font-size: 35px;font-style: italic;font-weight:bolder;">Hasil Cetak Kwitansi</p>
+			<img class="img-border img-responsive thumbnail mb16" style="border: 3px solid black;" src="hasil.png">
+		</div>
+	</div>
+</section>
+
+<!-- 
 <section class="oe_container oe_dark" style="min-width: 110%;margin-left: -5%;">
 	<div>
 		<div class="row">
@@ -158,9 +171,9 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
-<section class="oe_container oe_dark" style="min-width: 110%;margin-left: -5%;">
+<!-- <section class="oe_container oe_dark" style="min-width: 110%;margin-left: -5%;">
 	<div>
 		<div class="row">
 			<div class="col-sm-4" style="margin: auto;">
@@ -200,8 +213,8 @@
 			</div>
 		</div>	
 	</div>
-</section>
-
+</section> -->
+<!-- 
 <section class="oe_container">
 	<div >
 		<div >
@@ -228,4 +241,4 @@
 			<a class="btn mt8" title="Email on Support" style="background-color: #3497db;color: #FFFFFF !important;font-size: 20px;font-weight: bold;" href="mailto:ticket@browseinfo.in?Subject=Support Request for Print Journal Entries Report Odoo Apps" target="_blank"> Support Request </a>
 		</div>
 	</div>
-</section>
+</section> -->
